# arXivSearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: keywords.yaml
results/: arxiv_robotics_analysis_report.md
src/arxiv-robotics-analyzer/: __main__.py
src/arxiv_robo_trends/: __main__.py
src/arxiv_robo_trends/lib/: __init__.py  arxiv_analyzer.py
